[package]
name = "ironarm"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9" 
spin = "0.9.8"
volatile = "0.2.6"
x86_64 = "0.15.2"
